plugins {
    id 'java'
    id 'application'
}

group = 'Jazzdp'
version = '0.1.0'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    // MySQL driver
    implementation 'com.mysql:mysql-connector-j:8.3.0'

    // Flyway for migrations
    implementation 'org.flywaydb:flyway-core:9.22.0'

    testImplementation 'junit:junit:4.13.2'
}

application {
    // ✅ Correct modern syntax for Gradle 8+
    mainClass = 'shop.Main'
}

jar {
    manifest {
        attributes 'Main-Class': 'shop.Main'
    }
}

// ✅ Optional helper task
tasks.register('runApp', JavaExec) {
    group = 'application'
    description = 'Run the application using the project classpath'
    mainClass = 'shop.Main'
    classpath = sourceSets.main.runtimeClasspath
}
